# slack-primitive-cli

./: .flake8  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  django.yml
slack_primitive_cli/: __version__.py
slack_primitive_cli/command/: chat.py  files.py
slack_primitive_cli/common/: utils.py
slackcli/: __main__.py
slackcli/command/: chat.py  files.py
